# ssb-model-solver

./: .cookiecutter.json  .cruft.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  example-model-solver.ipynb  example-modelsolver.ipynb  noxfile.py  pyproject.toml  sonar-project.properties  test-modelsolver.ipynb
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
examples/: example-model-solver.ipynb  example-model-solver.py
model_solver/: equations.py  model_solver.py
src/: model_solver.py
src/model_solver/: __init__.py  __main__.py  functions.py  model_solver.py
src/model_solver/.github/workflows/: tests.yml
ssb-model-solver/: .cruft.json  .gitignore  README.md  SECURITY.md  pyproject.toml
ssb-model-solver/src/notebooks/: 00_imports.ipynb
ssb-model-solver/tests/: test_fizzbuzz.py
tests/: __init__.py  test_functions.py  test_main.py  test_model_solver.py
