[tool.poetry]
name = "model-solver"
version = "0.2.4"
description = "Class to define, block analyze and solve dynamic and algebraic models numerically"
authors = ["Magnus Helliesen <mkh@ssb.no>"]
license = "MIT"
packages = [{include = "model_solver"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dapla-toolbelt = "^1.3.2"
pyvis = "^0.3.2"
symengine = "^0.9.2"
matplotlib = "^3.7.1"
numba = "^0.57.0"
tornado = "6.3.3"
requests = "2.31.0"
cryptography = "41.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
